--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "manifest_version": 3,
   "name": "confetti-chrome-extension",
   "version": "1.0.1",
   "description": "An extension for Chromium-based browsers which can be used to fire confetti all over your screen.  \r Simply click the button in your browser!",
