--- a/src/manifest.json
+++ b/src/manifest.json
@@ -13,5 +13,9 @@
   "permissions": ["activeTab"],
   "icons": {
     "128": "media/icon.png"
-  }
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content_scripts.js"]
 }
